--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SMM Bot</title>
+    <title>SMMBot Online</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -14,8 +14,8 @@
 
 <body>
     <header>
-        <div class="logo"><img src="img/logo_blue.png" alt="smm logo"></div>
-        <nav>
+        <div class="logo"><img src="img/logo_blue.png" alt="smmbot online logo"></div>
+        <nav class="headerCentered">
             <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="#">Услуги</a></li>
@@ -25,20 +25,23 @@
                 <li><a href="#">Поддержка</a></li>
             </ul>
         </nav>
-        <div class="login"><a href="">login <span><i class="far fa-user-circle"></i></span></a></div>
+        <div class="login"><a href="">login <span><i class="far fa-user-circle fa-2x"></i></span></a></div>
 
 
     </header>
 
-    <div class="headerImage"> <button class="outline">Подробнее</button>
-        <h1>Сделай <br>
-            раскрутку аккаунта <br>
-            SMMBot ONLINE</h1>
+    <div class="headerImage">
+        <div class="headerImageInner">
+            <button href="#" class="border-gradient btn">Подробнее</button>
+            <h1>Сделай <br>
+                раскрутку <br> аккаунта <br>
+                SMMBot ONLINE</h1>
+        </div>
     </div>
     <main>
         <h2>Система SMMBot.Online предлагает вам зарабатывать вместе</h2>
 
-        <div class="cards">
+        <div class="threeCards">
             <div class="card">
                 <h3>Пакет бизнес</h3>
                 <hr>
@@ -75,28 +78,28 @@
 
         <h2>Выберите что будем раскручивать?</h2>
         <div class="socials">
-            <div class="socialMedia"><i class="fab fa-vk"></i>
+            <div class="socialMedia"><i class="fab fa-vk fa-2x"></i>
                 <p class="roundedBorders">8 услуг</p>
             </div>
-            <div class="socialMedia"><i class="fab fa-vk"></i>
+            <div class="socialMedia"><i class="fab fa-vk fa-2x"></i>
                 <p class="roundedBorders">4 услуг</p>
             </div>
-            <div class="socialMedia"><i class="fab fa-instagram"></i>
+            <div class="socialMedia"><i class="fab fa-instagram fa-2x"></i>
                 <p class="roundedBorders">14 услуг</p>
             </div>
-            <div class="socialMedia"><i class="fab fa-telegram-plane"></i>
+            <div class="socialMedia"><i class="fab fa-telegram-plane fa-2x"></i>
                 <p class="roundedBorders">6 услуг</p>
             </div>
-            <div class="socialMedia"><i class="fab fa-facebook-square"></i>
+            <div class="socialMedia"><i class="fab fa-facebook-square fa-2x"></i>
                 <p class="roundedBorders">9 услуг</p>
             </div>
-            <div class="socialMedia"><i class="fab fa-twitter-square"></i>
+            <div class="socialMedia"><i class="fab fa-twitter-square fa-2x"></i>
                 <p class="roundedBorders">9 услуг</p>
             </div>
-            <div class="socialMedia"><i class="fab fa-twitch"></i>
+            <div class="socialMedia"><i class="fab fa-twitch fa-2x"></i>
                 <p class="roundedBorders">1 услуг</p>
             </div>
-            <div class="socialMedia"><i class="fab fa-twitch"></i>
+            <div class="socialMedia"><i class="fab fa-twitch fa-2x"></i>
                 <p class="roundedBorders">8 услуг</p>
             </div>
         </div>
@@ -156,46 +159,51 @@
         <div class="footerContainer">
             <div class="footerTop">
                 <img src="img/icons8-online-support-filled-100.png" alt="Head of customer rep with mic">
+                <div class="text">
+                    <h4>Поддержка</h4>
+                    <p>Поддержка предоставляется с 10:00 до 17:00 московского времени, с понедельника по пятницу. В
+                        случае
+                        запроса в нерабочее время, служба поддержки ответит на ваше обращение на следующий рабочий
+                        день.
+                        <br><br>
 
-                <h4>Поддержка</h4>
-                <p>Поддержка предоставляется с 10:00 до 17:00 московского времени, с понедельника по пятницу. В случае
-                    запроса в нерабочее время, служба поддержки ответит на ваше обращение на следующий рабочий день.
-                    <br>
-
-                    Если вам нужна помощь, напишите нам письмо на support@smmbot.online
-                </p>
-            </div>
-            <div>
-                <div class="supportOptions">
-                    <div>
-                        <i class="fas fa-comment"></i>
-                        <h6>Чат</h6>
-                        <p>Удобный способ получить ответ, оставаясь на сайте</p>
-
-                    </div>
-
-                    <div>
-                        <i class="fab fa-viber"></i>
-                        <h6>Viber</h6>
-                        <p>Получите консультацию через одно из самых популярных приложений</p>
-
-                    </div>
-
-                    <div>
-                        <i class="fab fa-telegram-plane"></i>
-                        <h6>Telegram</h6>
-                        <p>Самый перспективный мессенджер для зароботка</p>
-
-                    </div>
-
-                    <div>
-                        <i class="fas fa-file-alt"></i>
-                        <h6>FAQ</h6>
-                        <p>База самых распространенных вопросов по работе с сервисом</p>
-
-                    </div>
+                        Если вам нужна помощь, напишите нам письмо на support@smmbot.online
+                    </p>
                 </div>
             </div>
+
+            <div class="supportOptions">
+                <div class="supportOptionsItem">
+                    <i class="fas fa-comment fa-2x"></i>
+                    <h5>Чат</h5>
+                    <p>Удобный способ получить ответ, оставаясь на сайте</p>
+
+                </div>
+
+                <hr class="rotate hide-lg">
+
+                <div class="supportOptionsItem">
+                    <i class="fab fa-viber fa-2x"></i>
+                    <h5>Viber</h5>
+                    <p>Получите консультацию через одно из самых популярных приложений</p>
+
+                </div>
+                <hr class="rotate hide-lg">
+                <div class="supportOptionsItem">
+                    <i class="fab fa-telegram-plane fa-2x"></i>
+                    <h5>Telegram</h5>
+                    <p>Самый перспективный мессенджер для зароботка</p>
+
+                </div>
+                <hr class="rotate hide-lg">
+                <div class="supportOptionsItem">
+                    <i class="fas fa-file-alt fa-2x"></i>
+                    <h5>FAQ</h5>
+                    <p>База самых распространенных вопросов по работе с сервисом</p>
+
+                </div>
+            </div>
+
         </div>
     </footer>
 </body>
