--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="logo"><img src="img/logo_blue.png" alt="smmbot online logo"></div>
+        <div class="logo"><a href="index.html"><img src="img/logo_blue.png" alt="smmbot online logo"></a></div>
         <nav class="headerCentered">
             <ul>
                 <li><a href="index.html">Главная</a></li>
@@ -25,17 +25,18 @@
                 <li><a href="#">Поддержка</a></li>
             </ul>
         </nav>
-        <div class="login"><a href="">login <span><i class="far fa-user-circle fa-2x"></i></span></a></div>
+        <div class="login"><a href="">login <span><i class="far fa-user-circle"></i></span></a></div>
 
 
     </header>
 
     <div class="headerImage">
         <div class="headerImageInner">
-            <button href="#" class="border-gradient btn">Подробнее</button>
             <h1>Сделай <br>
                 раскрутку <br> аккаунта <br>
                 SMMBot ONLINE</h1>
+            <button href="#" class="border-gradient btn"> <span>Подробнее</span></button>
+
         </div>
     </div>
     <main>
@@ -45,31 +46,40 @@
             <div class="card">
                 <h3>Пакет бизнес</h3>
                 <hr>
-                <p>Увеличение числа подписчиков <br><br>Наполнение записями +1000
-                    под тематику канала <br><br> Увеличение числа просмотров <br><br> Подключение к телеграм-биржам <br>
-                    Примерный срок окупаемости: 4 месяца
-                </p><br><br><br>
+                <p>Увеличение числа подписчиков</p>
+                <p>Наполнение записями +1000
+                    под тематику канала</p>
+                <p>Увеличение числа просмотров</p>
+                <p>Подключение к телеграм-биржам</p>
+                <p>Примерный срок окупаемости: 4 месяца</p>
+                <br><br><br>
                 <button class="outline">Подробнее</button>
             </div>
 
             <div class="card">
                 <h3>Пакет бизнес +</h3>
                 <hr>
-                <p>Увеличение числа подписчиков <br><br>Наполнение записями +1000
-                    под тематику канала <br><br> Увеличение числа просмотров <br><br> Подключение к телеграм-биржам <br>
-                    Примерный срок окупаемости: 3 месяца <br> Продвижение вашего канала с
-                    помощью наших партнеров (взаимопиар)
-                </p>
+                <p>Увеличение числа подписчиков</p>
+                <p>Наполнение записями +1000
+                    под тематику канала</p>
+                <p>Увеличение числа просмотров</p>
+                <p>Подключение к телеграм-биржам</p>
+                <p>Примерный срок окупаемости: 3 месяца</p>
+                <p>Продвижение вашего канала с
+                    помощью наших партнеров (взаимопиар)</p>
                 <button class="outline">Подробнее</button>
             </div>
 
             <div class="card">
                 <h3>Пакет индивидуал</h3>
                 <hr>
-                <p>Индивидуальный подход <br><br>Персональный менеджер <br<br>>Розробка по вашему
-                        техническому заданию <br><br> Возможность ведения канала
-                        под ключ <br>
-                </p><br><br><br><br><br><br><br> <br>
+                <p>Индивидуальный подход</p>
+                <p>Персональный менеджер</p>
+                <p>Розробка по вашему
+                    техническому заданию</p>
+                <p>Возможность ведения канала
+                    под ключ</p>
+                <br><br><br><br><br>
                 <button class="outline">Подробнее</button>
             </div>
 
@@ -81,7 +91,7 @@
             <div class="socialMedia"><i class="fab fa-vk fa-2x"></i>
                 <p class="roundedBorders">8 услуг</p>
             </div>
-            <div class="socialMedia"><i class="fab fa-vk fa-2x"></i>
+            <div class="socialMedia"><i class="fab fa-youtube fa-2x"></i>
                 <p class="roundedBorders">4 услуг</p>
             </div>
             <div class="socialMedia"><i class="fab fa-instagram fa-2x"></i>
@@ -99,7 +109,7 @@
             <div class="socialMedia"><i class="fab fa-twitch fa-2x"></i>
                 <p class="roundedBorders">1 услуг</p>
             </div>
-            <div class="socialMedia"><i class="fab fa-twitch fa-2x"></i>
+            <div class="socialMedia"><i class="fab fa-odnoklassniki fa-2x"></i>
                 <p class="roundedBorders">8 услуг</p>
             </div>
         </div>
@@ -107,10 +117,11 @@
 
         <div class="cards">
             <div class="cardWithImages">
-                <img src="../img/subscribers_7927.png" alt="Image showing no of subscribers in channel">
+                <div style="width:299px;"></div>
+                <img style="margin: 2px 0 0 0;" src="../img/subscribers_7927.png" alt="Image showing no of subscribers in channel">
                 <h3>Подписчики на канал</h3>
                 <p class="price">1.20 ₽</p>
-                <p>за подписчика</p>
+                <p class="priceExplanation">за подписчика</p>
                 <p>Подписчики на канал Телеграм.
                     Быстрое добавление подписчиков.</p>
                 <button class="outline">Заказать</button>
@@ -120,7 +131,7 @@
                 <img src="img/instaNotification.png" alt="Image showing notification for instagram following">
                 <h3>Подписчики (живые-офферы)</h3>
                 <p class="price">0.25 ₽</p>
-                <p>за подписчика</p>
+                <p class="priceExplanation">за подписчика</p>
                 <p>Качественные подписчики,
                     живые и активные,
                     быстрое добавление и большая база.</p>
@@ -131,7 +142,7 @@
                 <img src="img/instaFollowers.png" alt="Image showing instagram followers, post and following.">
                 <h3>Подписчики (боты)</h3>
                 <p class="price">0.20 ₽</p>
-                <p>за подписчика</p>
+                <p class="priceExplanation">за подписчика</p>
                 <p>Накрутка подписчиков в инстаграм,
                     Высокая скорость подписки,
                     вероятность списания.</p>
@@ -142,17 +153,12 @@
                 <img src="img/instaComments.png" alt="Image showing instagram comments.">
                 <h3>Лайки</h3>
                 <p class="price">0.04 ₽</p>
-                <p>за подписчика</p>
+                <p class="priceExplanation">за подписчика</p>
                 <p>Быстрое и дешевое добавление лайков
                     на указанные фото в Instagram</p>
                 <button class="outline">Заказать</button>
             </div>
-
-
-
         </div>
-
-
 
     </main>
     <footer>
@@ -180,7 +186,7 @@
 
                 </div>
 
-                <hr class="rotate hide-lg">
+                <hr>
 
                 <div class="supportOptionsItem">
                     <i class="fab fa-viber fa-2x"></i>
@@ -188,14 +194,14 @@
                     <p>Получите консультацию через одно из самых популярных приложений</p>
 
                 </div>
-                <hr class="rotate hide-lg">
+                <hr>
                 <div class="supportOptionsItem">
                     <i class="fab fa-telegram-plane fa-2x"></i>
                     <h5>Telegram</h5>
                     <p>Самый перспективный мессенджер для зароботка</p>
 
                 </div>
-                <hr class="rotate hide-lg">
+                <hr>
                 <div class="supportOptionsItem">
                     <i class="fas fa-file-alt fa-2x"></i>
                     <h5>FAQ</h5>
