completed services page and fixed some html and css issues.

--- a/Услуги.html
+++ b/Услуги.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SMMBot Online</title>
+    <title>Услуги | SMMBot Online</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
-<body>
+<body id="Услуги">
     <header>
-        <div class="logo"><a href="login.html"><img src="img/logo_blue.png" alt="smmbot online logo"></a></div>
+        <div class="logo"><a href="index.html"><img src="img/logo_blue.png" alt="smmbot online logo"></a></div>
         <nav class="headerCentered">
             <ul>
                 <li><a href="index.html">Главная</a></li>
@@ -33,14 +33,14 @@
     <div class="headerImage">
         <div class="headerImageInner">
             <h1>Сделай <br>
-                раскрутку <br> аккаунта <br>
-                <b>SMMBot ONLINE</b></h1>
-            <button href="#" class="border-gradient btn"> <span>Подробнее</span></button>
+                раскрутку аккаунта <br>
+                <b>SMMBot ONLINE</b></h1><br>
+            <button href="#" class="btn"> <span>Подробнее</span></button>
 
         </div>
     </div>
     <main>
-        <h2>Система SMMBot.Online предлагает вам зарабатывать вместе</h2>
+        <h2><b>Система SMMBot.Online предлагает вам зарабатывать вместе</b></h2>
 
         <div class="threeCards">
             <div class="card">
@@ -173,7 +173,7 @@
                         день.
                         <br><br>
 
-                        Если вам нужна помощь, напишите нам письмо на <a href="support@smmbot.online">support@smmbot.online</a> 
+                        Если вам нужна помощь, напишите нам письмо на <a href="support@smmbot.online">support@smmbot.online</a>
                     </p>
                 </div>
             </div>
