added favicon and fixed top botton position in services page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="Russian" />
+    <link rel="manifest" href="img/logo_blue.png" />
+    <link rel="mask-icon" href="img/logo_blue.png" color="#72A5BA" />
+    <link rel="icon" href="img/logo_blue.png" />
+    <meta name="msapplication-config" content="#" />
+    <meta name="theme-color" content="#72A5BA" />
     <title>SMMBot Online</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
         crossorigin="anonymous">
@@ -173,7 +180,7 @@
                         день.
                         <br><br>
 
-                        Если вам нужна помощь, напишите нам письмо на <a href="support@smmbot.online">support@smmbot.online</a> 
+                        Если вам нужна помощь, напишите нам письмо на <a href="support@smmbot.online">support@smmbot.online</a>
                     </p>
                 </div>
             </div>
