--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1>Сделай <br>
                 раскрутку <br> аккаунта <br>
                 <b>SMMBot ONLINE</b></h1>
-            <button href="#" class="border-gradient btn"> <span>Подробнее</span></button>
+            <button href="#" class="border-gradient btn"> <span>Заказать</span></button>
 
         </div>
     </div>
