--- a/Услуги.html
+++ b/Услуги.html
@@ -60,7 +60,7 @@
                 <p>Подключение к телеграм-биржам</p>
                 <p>Примерный срок окупаемости: 4 месяца</p>
                 <br><br><br>
-                <button class="btn">Подробнее</button>
+                <button class="btn">Заказать</button>
             </div>
 
             <div class="card">
@@ -74,7 +74,7 @@
                 <p>Примерный срок окупаемости: 3 месяца</p>
                 <p>Продвижение вашего канала с
                     помощью наших партнеров (взаимопиар)</p>
-                <button class="btn">Подробнее</button>
+                <button class="btn">Заказать</button>
             </div>
 
             <div class="card">
@@ -87,7 +87,7 @@
                 <p>Возможность ведения канала
                     под ключ</p>
                 <br><br><br><br><br>
-                <button class="btn">Подробнее</button>
+                <button class="btn">Заказать</button>
             </div>
 
         </div>
