changed image name

--- a/Услуги.html
+++ b/Услуги.html
@@ -125,7 +125,7 @@
         <div class="cards">
             <div class="cardWithImages">
                 <div style="width:299px;"></div>
-                <img style="margin: 2px 0 0 0;" src="img/subscribers_7927.png" alt="Image showing no of subscribers in channel">
+                <img style="margin: 2px 0 0 0;" src="img/subscribers.png" alt="Image showing no of subscribers in channel">
                 <h3>Подписчики на канал</h3>
                 <p class="price">1.20 ₽</p>
                 <p class="priceExplanation">за подписчика</p>
