fixed landing button with svg fixed other small details

--- a/Услуги.html
+++ b/Услуги.html
@@ -47,125 +47,132 @@
         </div>
     </div>
     <main>
-        <h2><b>Система SMMBot.Online предлагает вам зарабатывать вместе</b></h2>
+        <section class="one">
+            <h2><b>Система SMMBot.Online предлагает вам зарабатывать вместе</b></h2>
 
-        <div class="threeCards">
-            <div class="card">
-                <h3>Пакет бизнес</h3>
-                <hr>
-                <p>Увеличение числа подписчиков</p>
-                <p>Наполнение записями +1000
-                    под тематику канала</p>
-                <p>Увеличение числа просмотров</p>
-                <p>Подключение к телеграм-биржам</p>
-                <p>Примерный срок окупаемости: 4 месяца</p>
-                <br><br><br>
-                <button class="btn">Заказать</button>
+            <div class="threeCards">
+                <div class="card">
+                    <h3>Пакет бизнес</h3>
+                    <hr>
+                    <p>Увеличение числа подписчиков</p>
+                    <p>Наполнение записями +1000
+                        под тематику канала</p>
+                    <p>Увеличение числа просмотров</p>
+                    <p>Подключение к телеграм-биржам</p>
+                    <p>Примерный срок окупаемости: 4 месяца</p>
+                    <br><br><br>
+                    <button class="btn">Заказать</button>
+                </div>
+
+                <div class="card">
+                    <h3>Пакет бизнес +</h3>
+                    <hr>
+                    <p>Увеличение числа подписчиков</p>
+                    <p>Наполнение записями +1000
+                        под тематику канала</p>
+                    <p>Увеличение числа просмотров</p>
+                    <p>Подключение к телеграм-биржам</p>
+                    <p>Примерный срок окупаемости: 3 месяца</p>
+                    <p>Продвижение вашего канала с
+                        помощью наших партнеров (взаимопиар)</p>
+                    <button class="btn">Заказать</button>
+                </div>
+
+                <div class="card">
+                    <h3>Пакет индивидуал</h3>
+                    <hr>
+                    <p>Индивидуальный подход</p>
+                    <p>Персональный менеджер</p>
+                    <p>Розробка по вашему
+                        техническому заданию</p>
+                    <p>Возможность ведения канала
+                        под ключ</p>
+                    <br><br><br><br><br>
+                    <button class="btn">Заказать</button>
+                </div>
+
             </div>
-
-            <div class="card">
-                <h3>Пакет бизнес +</h3>
-                <hr>
-                <p>Увеличение числа подписчиков</p>
-                <p>Наполнение записями +1000
-                    под тематику канала</p>
-                <p>Увеличение числа просмотров</p>
-                <p>Подключение к телеграм-биржам</p>
-                <p>Примерный срок окупаемости: 3 месяца</p>
-                <p>Продвижение вашего канала с
-                    помощью наших партнеров (взаимопиар)</p>
-                <button class="btn">Заказать</button>
-            </div>
-
-            <div class="card">
-                <h3>Пакет индивидуал</h3>
-                <hr>
-                <p>Индивидуальный подход</p>
-                <p>Персональный менеджер</p>
-                <p>Розробка по вашему
-                    техническому заданию</p>
-                <p>Возможность ведения канала
-                    под ключ</p>
-                <br><br><br><br><br>
-                <button class="btn">Заказать</button>
-            </div>
-
-        </div>
+        </section>
         <hr>
 
-        <h2>Выберите что будем раскручивать?</h2>
-        <div class="socials">
-            <div class="socialMedia"><i class="fab fa-vk fa-2x"></i>
-                <p class="roundedBorders">8 услуг</p>
+        <section class="two">
+            <h2><b>Выберите что будем раскручивать?</b></h2>
+            <div class="socials">
+                <div class="socialMedia"><i class="fab fa-vk fa-2x"></i>
+                    <p class="roundedBorders">8 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-youtube fa-2x"></i>
+                    <p class="roundedBorders">4 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-instagram fa-2x"></i>
+                    <p class="roundedBorders">14 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-telegram-plane fa-2x"></i>
+                    <p class="roundedBorders">6 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-facebook-square fa-2x"></i>
+                    <p class="roundedBorders">9 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-twitter-square fa-2x"></i>
+                    <p class="roundedBorders">9 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-twitch fa-2x"></i>
+                    <p class="roundedBorders">1 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-odnoklassniki fa-2x"></i>
+                    <p class="roundedBorders">8 услуг</p>
+                </div>
             </div>
-            <div class="socialMedia"><i class="fab fa-youtube fa-2x"></i>
-                <p class="roundedBorders">4 услуг</p>
-            </div>
-            <div class="socialMedia"><i class="fab fa-instagram fa-2x"></i>
-                <p class="roundedBorders">14 услуг</p>
-            </div>
-            <div class="socialMedia"><i class="fab fa-telegram-plane fa-2x"></i>
-                <p class="roundedBorders">6 услуг</p>
-            </div>
-            <div class="socialMedia"><i class="fab fa-facebook-square fa-2x"></i>
-                <p class="roundedBorders">9 услуг</p>
-            </div>
-            <div class="socialMedia"><i class="fab fa-twitter-square fa-2x"></i>
-                <p class="roundedBorders">9 услуг</p>
-            </div>
-            <div class="socialMedia"><i class="fab fa-twitch fa-2x"></i>
-                <p class="roundedBorders">1 услуг</p>
-            </div>
-            <div class="socialMedia"><i class="fab fa-odnoklassniki fa-2x"></i>
-                <p class="roundedBorders">8 услуг</p>
-            </div>
-        </div>
+        </section>
         <hr>
 
-        <div class="cards">
-            <div class="cardWithImages">
-                <div style="width:299px;"></div>
-                <img style="margin: 2px 0 0 0;" src="img/subscribers.png" alt="Image showing no of subscribers in channel">
-                <h3>Подписчики на канал</h3>
-                <p class="price">1.20 ₽</p>
-                <p class="priceExplanation">за подписчика</p>
-                <p>Подписчики на канал Телеграм.
-                    Быстрое добавление подписчиков.</p>
-                <button class="btn">Заказать</button>
-            </div>
+        <section class="three">
+            <h2><b>Горячие предложения</b></h2>
+            <div class="cards">
+                <div class="cardWithImages">
+                    <div style="width:299px;"></div>
+                    <img style="margin: 2px 0 0 0;" src="img/subscribers.png" alt="Image showing no of subscribers in channel">
+                    <h3>Подписчики на канал</h3>
+                    <p class="price">1.20 ₽</p>
+                    <p class="priceExplanation">за подписчика</p>
+                    <p>Подписчики на канал Телеграм.
+                        Быстрое добавление подписчиков.</p>
+                    <button class="btn">Заказать</button>
+                </div>
 
-            <div class="cardWithImages">
-                <img src="img/instaNotification.png" alt="Image showing notification for instagram following">
-                <h3>Подписчики (живые-офферы)</h3>
-                <p class="price">0.25 ₽</p>
-                <p class="priceExplanation">за подписчика</p>
-                <p>Качественные подписчики,
-                    живые и активные,
-                    быстрое добавление и большая база.</p>
-                <button class="btn">Заказать</button>
-            </div>
+                <div class="cardWithImages">
+                    <img src="img/instaNotification.png" alt="Image showing notification for instagram following">
+                    <h3>Подписчики (живые-офферы)</h3>
+                    <p class="price">0.25 ₽</p>
+                    <p class="priceExplanation">за подписчика</p>
+                    <p>Качественные подписчики,
+                        живые и активные,
+                        быстрое добавление и большая база.</p>
+                    <button class="btn">Заказать</button>
+                </div>
 
-            <div class="cardWithImages">
-                <img src="img/instaFollowers.png" alt="Image showing instagram followers, post and following.">
-                <h3>Подписчики (боты)</h3>
-                <p class="price">0.20 ₽</p>
-                <p class="priceExplanation">за подписчика</p>
-                <p>Накрутка подписчиков в инстаграм,
-                    Высокая скорость подписки,
-                    вероятность списания.</p>
-                <button class="btn">Заказать</button>
-            </div>
+                <div class="cardWithImages">
+                    <img src="img/instaFollowers.png" alt="Image showing instagram followers, post and following.">
+                    <h3>Подписчики (боты)</h3>
+                    <p class="price">0.20 ₽</p>
+                    <p class="priceExplanation">за подписчика</p>
+                    <p>Накрутка подписчиков в инстаграм,
+                        Высокая скорость подписки,
+                        вероятность списания.</p>
+                    <button class="btn">Заказать</button>
+                </div>
 
-            <div class="cardWithImages">
-                <img src="img/instaComments.png" alt="Image showing instagram comments.">
-                <h3>Лайки</h3>
-                <p class="price">0.04 ₽</p>
-                <p class="priceExplanation">за подписчика</p>
-                <p>Быстрое и дешевое добавление лайков
-                    на указанные фото в Instagram</p>
-                <button class="btn">Заказать</button>
+                <div class="cardWithImages">
+                    <img src="img/instaComments.png" alt="Image showing instagram comments.">
+                    <h3>Лайки</h3>
+                    <p class="price">0.04 ₽</p>
+                    <p class="priceExplanation">за подписчика</p>
+                    <p>Быстрое и дешевое добавление лайков
+                        на указанные фото в Instagram</p>
+                    <button class="btn">Заказать</button>
+                </div>
             </div>
-        </div>
+        </section>
 
     </main>
     <footer>
