--- a/index.html
+++ b/index.html
@@ -42,130 +42,148 @@
             <h1>Сделай <br>
                 раскрутку <br> аккаунта <br>
                 <b>SMMBot ONLINE</b></h1>
-            <button href="#" class="border-gradient btn"> <span>Заказать</span></button>
+            <a type="button" href="#">
+                <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <defs>
+                        <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                            <stop stop-color="#BC8CCD" offset="0%"></stop>
+                            <stop stop-color="#72A5BA" offset="100%"></stop>
+                        </linearGradient>
+                    </defs>
+                    <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                    <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                </svg>
+                Заказать
 
         </div>
     </div>
     <main>
-        <h2>Система SMMBot.Online предлагает вам зарабатывать вместе</h2>
+        <section class="one">
+            <h2>Система SMMBot.Online предлагает вам зарабатывать вместе</h2>
 
-        <div class="threeCards">
-            <div class="card">
-                <h3>Пакет бизнес</h3>
-                <hr>
-                <p>Увеличение числа подписчиков</p>
-                <p>Наполнение записями +1000
-                    под тематику канала</p>
-                <p>Увеличение числа просмотров</p>
-                <p>Подключение к телеграм-биржам</p>
-                <p>Примерный срок окупаемости: 4 месяца</p>
-                <br><br><br>
-                <button class="btn">Подробнее</button>
+            <div class="threeCards">
+                <div class="card">
+                    <h3>Пакет бизнес</h3>
+                    <hr>
+                    <p>Увеличение числа подписчиков</p>
+                    <p>Наполнение записями +1000
+                        под тематику канала</p>
+                    <p>Увеличение числа просмотров</p>
+                    <p>Подключение к телеграм-биржам</p>
+                    <p>Примерный срок окупаемости: 4 месяца</p>
+                    <br><br><br><br><br><br><br>
+                    <button class="btn">Подробнее</button>
+                </div>
+
+                <div class="card">
+                    <h3>Пакет бизнес +</h3>
+                    <hr>
+                    <p>Увеличение числа подписчиков</p>
+                    <p>Наполнение записями +1000
+                        под тематику канала</p>
+                    <p>Увеличение числа просмотров</p>
+                    <p>Подключение к телеграм-биржам</p>
+                    <p>Примерный срок окупаемости: 3 месяца</p>
+                    <p>Продвижение вашего канала с
+                        помощью наших партнеров (взаимопиар)</p>
+                    <button class="btn">Подробнее</button>
+                </div>
+
+                <div class="card">
+                    <h3>Пакет индивидуал</h3>
+                    <hr>
+                    <p>Индивидуальный подход</p>
+                    <p>Персональный менеджер</p>
+                    <p>Розробка по вашему
+                        техническому заданию</p>
+                    <p>Возможность ведения канала
+                        под ключ</p>
+                    <br><br><br><br><br><br><br><br><br><br><br>
+                    <button class="btn">Подробнее</button>
+                </div>
+
             </div>
-
-            <div class="card">
-                <h3>Пакет бизнес +</h3>
-                <hr>
-                <p>Увеличение числа подписчиков</p>
-                <p>Наполнение записями +1000
-                    под тематику канала</p>
-                <p>Увеличение числа просмотров</p>
-                <p>Подключение к телеграм-биржам</p>
-                <p>Примерный срок окупаемости: 3 месяца</p>
-                <p>Продвижение вашего канала с
-                    помощью наших партнеров (взаимопиар)</p>
-                <button class="btn">Подробнее</button>
-            </div>
-
-            <div class="card">
-                <h3>Пакет индивидуал</h3>
-                <hr>
-                <p>Индивидуальный подход</p>
-                <p>Персональный менеджер</p>
-                <p>Розробка по вашему
-                    техническому заданию</p>
-                <p>Возможность ведения канала
-                    под ключ</p>
-                <br><br><br><br><br>
-                <button class="btn">Подробнее</button>
-            </div>
-
-        </div>
+        </section>
         <hr>
 
-        <h2>Выберите что будем раскручивать?</h2>
-        <div class="socials">
-            <div class="socialMedia"><i class="fab fa-vk fa-2x"></i>
-                <p class="roundedBorders">8 услуг</p>
+        <section>
+            <h2>Выберите что будем раскручивать?</h2>
+            <div class="socials">
+                <div class="socialMedia"><i class="fab fa-vk fa-2x"></i>
+                    <p class="roundedBorders">8 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-youtube fa-2x"></i>
+                    <p class="roundedBorders">4 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-instagram fa-2x"></i>
+                    <p class="roundedBorders">14 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-telegram-plane fa-2x"></i>
+                    <p class="roundedBorders">6 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-facebook-square fa-2x"></i>
+                    <p class="roundedBorders">9 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-twitter-square fa-2x"></i>
+                    <p class="roundedBorders">9 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-twitch fa-2x"></i>
+                    <p class="roundedBorders">1 услуг</p>
+                </div>
+                <div class="socialMedia"><i class="fab fa-odnoklassniki fa-2x"></i>
+                    <p class="roundedBorders">8 услуг</p>
+                </div>
             </div>
-            <div class="socialMedia"><i class="fab fa-youtube fa-2x"></i>
-                <p class="roundedBorders">4 услуг</p>
-            </div>
-            <div class="socialMedia"><i class="fab fa-instagram fa-2x"></i>
-                <p class="roundedBorders">14 услуг</p>
-            </div>
-            <div class="socialMedia"><i class="fab fa-telegram-plane fa-2x"></i>
-                <p class="roundedBorders">6 услуг</p>
-            </div>
-            <div class="socialMedia"><i class="fab fa-facebook-square fa-2x"></i>
-                <p class="roundedBorders">9 услуг</p>
-            </div>
-            <div class="socialMedia"><i class="fab fa-twitter-square fa-2x"></i>
-                <p class="roundedBorders">9 услуг</p>
-            </div>
-            <div class="socialMedia"><i class="fab fa-twitch fa-2x"></i>
-                <p class="roundedBorders">1 услуг</p>
-            </div>
-            <div class="socialMedia"><i class="fab fa-odnoklassniki fa-2x"></i>
-                <p class="roundedBorders">8 услуг</p>
-            </div>
-        </div>
+        </section>
         <hr>
 
-        <div class="cards">
-            <div class="cardWithImages">
-                <div style="width:299px;"></div>
-                <img style="margin: 2px 0 0 0;" src="img/subscribers.png" alt="Image showing no of subscribers in channel">
-                <h3>Подписчики на канал</h3>
-                <p class="price">1.20 ₽</p>
-                <p class="priceExplanation">за подписчика</p>
-                <p>Подписчики на канал Телеграм.
-                    Быстрое добавление подписчиков.</p>
-                <button class="btn">Заказать</button>
-            </div>
+        <section>
+            <h2><b>Горячие предложения</b></h2>
+            <div class="cards">
+                <div class="cardWithImages">
+                    <div style="width:299px;"></div>
+                    <img style="margin: 2px 0 0 0;" src="img/subscribers.png" alt="Image showing no of subscribers in channel">
+                    <h3>Подписчики на канал</h3>
+                    <p class="price">1.20 ₽</p>
+                    <p class="priceExplanation">за подписчика</p>
+                    <p>Подписчики на канал Телеграм.
+                        Быстрое добавление подписчиков.</p>
+                    <button class="btn">Заказать</button>
+                </div>
 
-            <div class="cardWithImages">
-                <img src="img/instaNotification.png" alt="Image showing notification for instagram following">
-                <h3>Подписчики (живые-офферы)</h3>
-                <p class="price">0.25 ₽</p>
-                <p class="priceExplanation">за подписчика</p>
-                <p>Качественные подписчики,
-                    живые и активные,
-                    быстрое добавление и большая база.</p>
-                <button class="btn">Заказать</button>
-            </div>
+                <div class="cardWithImages">
+                    <img src="img/instaNotification.png" alt="Image showing notification for instagram following">
+                    <h3>Подписчики (живые-офферы)</h3>
+                    <p class="price">0.25 ₽</p>
+                    <p class="priceExplanation">за подписчика</p>
+                    <p>Качественные подписчики,
+                        живые и активные,
+                        быстрое добавление и большая база.</p>
+                    <button class="btn">Заказать</button>
+                </div>
 
-            <div class="cardWithImages">
-                <img src="img/instaFollowers.png" alt="Image showing instagram followers, post and following.">
-                <h3>Подписчики (боты)</h3>
-                <p class="price">0.20 ₽</p>
-                <p class="priceExplanation">за подписчика</p>
-                <p>Накрутка подписчиков в инстаграм,
-                    Высокая скорость подписки,
-                    вероятность списания.</p>
-                <button class="btn">Заказать</button>
-            </div>
+                <div class="cardWithImages">
+                    <img src="img/instaFollowers.png" alt="Image showing instagram followers, post and following.">
+                    <h3>Подписчики (боты)</h3>
+                    <p class="price">0.20 ₽</p>
+                    <p class="priceExplanation">за подписчика</p>
+                    <p>Накрутка подписчиков в инстаграм,
+                        Высокая скорость подписки,
+                        вероятность списания.</p>
+                    <button class="btn">Заказать</button>
+                </div>
 
-            <div class="cardWithImages">
-                <img src="img/instaComments.png" alt="Image showing instagram comments.">
-                <h3>Лайки</h3>
-                <p class="price">0.04 ₽</p>
-                <p class="priceExplanation">за подписчика</p>
-                <p>Быстрое и дешевое добавление лайков
-                    на указанные фото в Instagram</p>
-                <button class="btn">Заказать</button>
+                <div class="cardWithImages">
+                    <img src="img/instaComments.png" alt="Image showing instagram comments.">
+                    <h3>Лайки</h3>
+                    <p class="price">0.04 ₽</p>
+                    <p class="priceExplanation">за подписчика</p>
+                    <p>Быстрое и дешевое добавление лайков
+                        на указанные фото в Instagram</p>
+                    <button class="btn">Заказать</button>
+                </div>
             </div>
-        </div>
+        </section>
 
     </main>
     <footer>
