working on hamburger menu

--- a/index.html
+++ b/index.html
@@ -22,16 +22,35 @@
 <body>
     <header>
         <div class="logo"><a href="login.html"><img src="img/logo_blue.png" alt="smmbot online logo"></a></div>
-        <nav class="headerCentered">
-            <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="Услуги.html">Услуги</a></li>
-                <li><a href="#">Бизнес</a></li>
-                <li><a href="#">Скидки</a></li>
-                <li><a href="#">Партнерка</a></li>
-                <li><a href="#">Поддержка</a></li>
+        <div class="menu-btn">
+            <div class="btn-line"></div>
+            <div class="btn-line"></div>
+            <div class="btn-line"></div>
+        </div>
+        <nav class="menu headerCentered">
+
+            <ul class="menu-nav">
+                <li class="nav-item current">
+                    <a href="index.html" class="nav-link">Главная</a>
+                </li>
+                <li class="nav-item">
+                    <a href="Услуги.html" class="nav-link">Услуги</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Бизнес</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Скидки </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Партнерка</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Поддержка</a>
+                </li>
             </ul>
         </nav>
+
         <div class="login"><a href="">login <span><i class="far fa-user-circle"></i></span></a></div>
 
 
@@ -237,6 +256,9 @@
 
         </div>
     </footer>
+
+    <script src="js/main.js"></script>
+
 </body>
 
 </html>
