created htaccess file for removing file extention and for 404 page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <div class="logo"><a href="login.html"><img src="img/logo_blue.png" alt="smmbot online logo"></a></div>
+        <div class="logo"><a href="login"><img src="img/logo_blue.png" alt="smmbot online logo"></a></div>
         <div class="menu-btn">
             <div class="btn-line"></div>
             <div class="btn-line"></div>
@@ -31,10 +31,10 @@
 
             <ul class="menu-nav">
                 <li class="nav-item current">
-                    <a href="index.html" class="nav-link">Главная</a>
+                    <a href="index" class="nav-link">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a href="Услуги.html" class="nav-link">Услуги</a>
+                    <a href="Услуги" class="nav-link">Услуги</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Бизнес</a>
