making fixes by w3 validator

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="Russian" />
     <link rel="manifest" href="img/logo_blue.png" />
     <link rel="mask-icon" href="img/logo_blue.png" color="#72A5BA" />
@@ -72,10 +70,11 @@
                     <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
                     <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
                 </svg>
-                Заказать
+                Заказать</a>
 
         </div>
     </div>
+
     <main>
         <section class="one">
             <h2>Система SMMBot.Online предлагает вам зарабатывать вместе</h2>
@@ -217,7 +216,7 @@
                         день.
                         <br><br>
 
-                        Если вам нужна помощь, напишите нам письмо на <a href="support@smmbot.online">support@smmbot.online</a>
+                        Если вам нужна помощь, напишите нам письмо на <a target="_blank" href="support@smmbot.online">support@smmbot.online</a>
                     </p>
                 </div>
             </div>
