making fixes by w3 validator

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h1>Сделай <br>
                 раскрутку <br> аккаунта <br>
                 <b>SMMBot ONLINE</b></h1>
-            <a type="button" href="#">
+            <a type="button" name="button" href="#">
                 <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <defs>
                         <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
