making fixes by w3 validator

--- a/Услуги.html
+++ b/Услуги.html
@@ -59,7 +59,7 @@
             <h1>Сделай <br>
                 раскрутку аккаунта <br>
                 <b>SMMBot ONLINE</b></h1><br>
-            <button href="#" class="btn"> <span>Подробнее</span></button>
+            <button class="btn"> <span>Подробнее</span></button>
 
         </div>
     </div>
