fixed buttons to looke identical to design and added new media query

--- a/index.html
+++ b/index.html
@@ -83,41 +83,81 @@
                 <div class="card">
                     <h3>Пакет бизнес</h3>
                     <hr>
-                    <p>Увеличение числа подписчиков</p>
-                    <p>Наполнение записями +1000
-                        под тематику канала</p>
-                    <p>Увеличение числа просмотров</p>
-                    <p>Подключение к телеграм-биржам</p>
-                    <p>Примерный срок окупаемости: 4 месяца</p>
-                    <br><br><br><br><br><br><br>
-                    <button class="btn">Подробнее</button>
+                    <div class="cardParag">
+                        <p>Увеличение числа подписчиков</p>
+                        <p>Наполнение записями +1000
+                            под тематику канала</p>
+                        <p>Увеличение числа просмотров</p>
+                        <p>Подключение к телеграм-биржам</p>
+                        <p>Примерный срок окупаемости: 4 месяца</p>
+                    </div>
+                    <a class="cardSvgButton" href="#">
+                        <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <defs>
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                    <stop stop-color="#BC8CCD" offset="0%"></stop>
+                                    <stop stop-color="#72A5BA" offset="100%"></stop>
+                                </linearGradient>
+                            </defs>
+                            <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                        </svg>
+                        Подробнее</a>
                 </div>
 
                 <div class="card">
                     <h3>Пакет бизнес +</h3>
                     <hr>
-                    <p>Увеличение числа подписчиков</p>
-                    <p>Наполнение записями +1000
-                        под тематику канала</p>
-                    <p>Увеличение числа просмотров</p>
-                    <p>Подключение к телеграм-биржам</p>
-                    <p>Примерный срок окупаемости: 3 месяца</p>
-                    <p>Продвижение вашего канала с
-                        помощью наших партнеров (взаимопиар)</p>
-                    <button class="btn">Подробнее</button>
+                    <div class="cardParag">
+                        <p>Увеличение числа подписчиков</p>
+                        <p>Наполнение записями +1000
+                            под тематику канала</p>
+                        <p>Увеличение числа просмотров</p>
+                        <p>Подключение к телеграм-биржам</p>
+                        <p>Примерный срок окупаемости: 3 месяца</p>
+                        <p>Продвижение вашего канала с
+                            помощью наших партнеров (взаимопиар)</p>
+                    </div>
+                    <a class="cardSvgButton" href="#">
+                        <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <defs>
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                    <stop stop-color="#BC8CCD" offset="0%"></stop>
+                                    <stop stop-color="#72A5BA" offset="100%"></stop>
+                                </linearGradient>
+                            </defs>
+                            <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                        </svg>
+                        Подробнее</a>
                 </div>
 
                 <div class="card">
                     <h3>Пакет индивидуал</h3>
                     <hr>
-                    <p>Индивидуальный подход</p>
-                    <p>Персональный менеджер</p>
-                    <p>Розробка по вашему
-                        техническому заданию</p>
-                    <p>Возможность ведения канала
-                        под ключ</p>
-                    <br><br><br><br><br><br><br><br><br><br><br>
-                    <button class="btn">Подробнее</button>
+                    <div class="cardParag">
+                        <p>Индивидуальный подход</p>
+                        <p>Персональный менеджер</p>
+                        <p>Розробка по вашему
+                            техническому заданию</p>
+                        <p>Возможность ведения канала
+                            под ключ</p>
+                    </div>
+                    <a class="cardSvgButton" href="#">
+                        <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <defs>
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                    <stop stop-color="#BC8CCD" offset="0%"></stop>
+                                    <stop stop-color="#72A5BA" offset="100%"></stop>
+                                </linearGradient>
+                            </defs>
+                            <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                        </svg>
+                        Подробнее</a>
                 </div>
 
             </div>
@@ -166,7 +206,19 @@
                     <p class="priceExplanation">за подписчика</p>
                     <p>Подписчики на канал Телеграм.
                         Быстрое добавление подписчиков.</p>
-                    <button class="btn">Заказать</button>
+                    <a class="cardSvgButton" href="#">
+                        <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <defs>
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                    <stop stop-color="#BC8CCD" offset="0%"></stop>
+                                    <stop stop-color="#72A5BA" offset="100%"></stop>
+                                </linearGradient>
+                            </defs>
+                            <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                        </svg>
+                        Заказать</a>
                 </div>
 
                 <div class="cardWithImages">
@@ -177,7 +229,19 @@
                     <p>Качественные подписчики,
                         живые и активные,
                         быстрое добавление и большая база.</p>
-                    <button class="btn">Заказать</button>
+                    <a class="cardSvgButton" href="#">
+                        <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <defs>
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                    <stop stop-color="#BC8CCD" offset="0%"></stop>
+                                    <stop stop-color="#72A5BA" offset="100%"></stop>
+                                </linearGradient>
+                            </defs>
+                            <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                        </svg>
+                        Заказать</a>
                 </div>
 
                 <div class="cardWithImages">
@@ -188,7 +252,19 @@
                     <p>Накрутка подписчиков в инстаграм,
                         Высокая скорость подписки,
                         вероятность списания.</p>
-                    <button class="btn">Заказать</button>
+                    <a class="cardSvgButton" href="#">
+                        <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <defs>
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                    <stop stop-color="#BC8CCD" offset="0%"></stop>
+                                    <stop stop-color="#72A5BA" offset="100%"></stop>
+                                </linearGradient>
+                            </defs>
+                            <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                        </svg>
+                        Заказать</a>
                 </div>
 
                 <div class="cardWithImages">
@@ -198,7 +274,19 @@
                     <p class="priceExplanation">за подписчика</p>
                     <p>Быстрое и дешевое добавление лайков
                         на указанные фото в Instagram</p>
-                    <button class="btn">Заказать</button>
+                    <a class="cardSvgButton" href="#">
+                        <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <defs>
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                    <stop stop-color="#BC8CCD" offset="0%"></stop>
+                                    <stop stop-color="#72A5BA" offset="100%"></stop>
+                                </linearGradient>
+                            </defs>
+                            <path fill="none" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                            <path class="icon--plain" fill="url(#linearGradient-1)" d='M50,95 a45,45 0 0,1 0,-90 h150 a45,45 0 1,1 0,90 h-150' />
+                        </svg>
+                        Заказать</a>
                 </div>
             </div>
         </section>
