--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a id="svgButton" href="#">
                 <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <defs>
-                        <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                        <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" class="linearGradient-1">
                             <stop stop-color="#BC8CCD" offset="0%"></stop>
                             <stop stop-color="#72A5BA" offset="100%"></stop>
                         </linearGradient>
@@ -95,7 +95,7 @@
                         <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
                             <defs>
-                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" class="linearGradient-1">
                                     <stop stop-color="#BC8CCD" offset="0%"></stop>
                                     <stop stop-color="#72A5BA" offset="100%"></stop>
                                 </linearGradient>
@@ -123,7 +123,7 @@
                         <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
                             <defs>
-                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" class="linearGradient-1">
                                     <stop stop-color="#BC8CCD" offset="0%"></stop>
                                     <stop stop-color="#72A5BA" offset="100%"></stop>
                                 </linearGradient>
@@ -149,7 +149,7 @@
                         <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
                             <defs>
-                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" class="linearGradient-1">
                                     <stop stop-color="#BC8CCD" offset="0%"></stop>
                                     <stop stop-color="#72A5BA" offset="100%"></stop>
                                 </linearGradient>
@@ -210,7 +210,7 @@
                         <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
                             <defs>
-                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" class="linearGradient-1">
                                     <stop stop-color="#BC8CCD" offset="0%"></stop>
                                     <stop stop-color="#72A5BA" offset="100%"></stop>
                                 </linearGradient>
@@ -233,7 +233,7 @@
                         <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
                             <defs>
-                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" class="linearGradient-1">
                                     <stop stop-color="#BC8CCD" offset="0%"></stop>
                                     <stop stop-color="#72A5BA" offset="100%"></stop>
                                 </linearGradient>
@@ -256,7 +256,7 @@
                         <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
                             <defs>
-                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" class="linearGradient-1">
                                     <stop stop-color="#BC8CCD" offset="0%"></stop>
                                     <stop stop-color="#72A5BA" offset="100%"></stop>
                                 </linearGradient>
@@ -278,7 +278,7 @@
                         <svg class="icon" viewBox="0 0 250 100" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
                             <defs>
-                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" id="linearGradient-1">
+                                <linearGradient x1="0%" y1="0%" x2="0%" y2="100%" class="linearGradient-1">
                                     <stop stop-color="#BC8CCD" offset="0%"></stop>
                                     <stop stop-color="#72A5BA" offset="100%"></stop>
                                 </linearGradient>
