--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="btn-line"></div>
         </div>
         <nav class="menu headerCentered">
-
+            <div class="btn-toggle-nav"></div>
             <ul class="menu-nav">
                 <li class="nav-item current">
                     <a href="index" class="nav-link">Главная</a>
